--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@
 ################################################################################
 
 # Name of your plugin, path to your plugin (relative to ug's root path) and sources.
-set(pluginName	limex)
+set(pluginName LIMEX)
 set(pluginPath	plugins/experimental/limex)
 set(SOURCES		limex_plugin.cpp
 				time_disc/time_extrapolation.cpp
