Install into ug4py

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,5 +57,5 @@ if(USE_PYBIND11)
 	#ug4pybind_add_module(pylimex ${myPluginSources} ${myLibraries})
 	target_link_libraries (pylimex PRIVATE ${pluginName})
 	set_target_properties(pylimex PROPERTIES INSTALL_RPATH "$ORIGIN/..:$ORIGIN/../../../lib")
-	install(TARGETS pylimex LIBRARY DESTINATION python COMPONENT pymodules)
+	install(TARGETS pylimex LIBRARY DESTINATION ug4py COMPONENT pymodules)
 endif(USE_PYBIND11)
