Link against libug4.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,7 +55,7 @@ if(USE_PYBIND11)
 	# First argument must match module name in PYBIND11_MODULE call
 	python_add_library(pylimex MODULE  ${myPluginSources} ${SOURCES} WITH_SOABI)
 	#ug4pybind_add_module(pylimex ${myPluginSources} ${myLibraries})
-	target_link_libraries (pylimex PRIVATE ${pluginName})
+	target_link_libraries (pylimex PRIVATE ${pluginName} ug4_s)
 	set_target_properties(pylimex PROPERTIES INSTALL_RPATH "$ORIGIN/..:$ORIGIN/../../../lib")
 	install(TARGETS pylimex LIBRARY DESTINATION ug4py COMPONENT pymodules)
 endif(USE_PYBIND11)
