--- a/REUSE.toml
+++ b/REUSE.toml
@@ -2,7 +2,7 @@ version = 1
 
 
 [[annotations]]
-path = ["lua/**", "sample/**", "tests/**", "README.md", "REUSE.toml"]
+path = [".github/**", "lua/**", "sample/**", "tests/**", "README.md", "REUSE.toml"]
 precedence = "override"
 SPDX-FileCopyrightText = "2025 Arne Naegel"
 SPDX-License-Identifier = "LicenseRef-UG4-LGPL-3.0"
