--- a/REUSE.toml
+++ b/REUSE.toml
@@ -1,8 +1,13 @@
 version = 1
 
+[[annotations]]
+path = ["REUSE.toml", "Doxyfile"]
+precedence = "override"
+SPDX-FileCopyrightText = "2025 Arne Naegel"
+SPDX-License-Identifier = "CC0-1.0"
 
 [[annotations]]
-path = [".github/**", "lua/**", "sample/**", "tests/**", "README.md", "REUSE.toml"]
+path = [".github/**", "lua/**", "sample/**", "tests/**", "README.md"]
 precedence = "override"
 SPDX-FileCopyrightText = "2025 Arne Naegel"
 SPDX-License-Identifier = "LicenseRef-UG4-LGPL-3.0"
